Version 2.77.15.1 - 25 January 2010, Thierry Vignaud

- mdkapplet-extended-maintenance-helper
  o do not show banner in error dialog when embedded in mcc
  o fix getting password when embedded in mcc

Version 2.77.15 - 21 January 2010, Thierry Vignaud

- mdkapplet
  o allow to get extended maintenance on some distributions
  o fix accepting values vritten by configurator (#56348)
- mdkapplet-config
  o hide non available options instead of making them insensitive
    (#56637)
- include distribution version in user agent

Version 2.77.14 - 9 December 2009, Thierry Vignaud

- drop diagnostics, strict, vars and warnings pragmas
- mdkapplet-config
  o make sure dialog is properly sized

Version 2.77.13.1 - 9 December 2009, Thierry Vignaud

- translations updates

Version 2.77.13 - 26 November 2009, Thierry Vignaud

- mdkapplet-config
  o offer a couple more options regarding checks

Version 2.77.12 - 26 November 2009, Thierry Vignaud

- mdkapplet-restricted-helper:
  o fix running on 2008.1 (#55956)

Version 2.77.11 - 24 November 2009, Thierry Vignaud

- mdkapplet-config
  o make it work on 2008.x & 2009.x
- mdkapplet-enterprise-update-helper
  o new authentication scheme (#55735)

Version 2.77.10 - 19 November 2009, Thierry Vignaud

- mdkapplet
  o add mdkonline version to distribution list requests
  o log crashes of mdkapplet checker process
  o only enable 'download all packages at once' on 2010.1 and further
  o prevent checker process from crashing on 2008.1 and 2009.0

Version 2.77.9 - 10 November 2009, Thierry Vignaud

- mdkapplet
  o add distribution version to distribution list requests
  o fix a crash (#55346)
  o fix adding restricted media (#55320)
  o warn about new distro or no more supported distro only after all
    updates were applied
- mdkapplet-upgrade-helper
  o make sure utf8.pm is loaded before starting an upgrade (#55090)

Version 2.77.8 - 5 November 2009, Thierry Vignaud

- mdkapplet