@@ -1,3 +1,6 @@
+- mdkapplet
+  o enable to share some code with mcc
+
 Version 2.77.15.1 - 25 January 2010, Thierry Vignaud
 
 - mdkapplet-extended-maintenance-helper
